--- a/CostMangerLocal/package.json
+++ b/CostMangerLocal/package.json
@@ -14,6 +14,7 @@
     "ejs-mate": "^4.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.3.5",
     "morgan": "~1.9.1"
   }
